added content of the website

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,144 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div id="wrapper">
+            <div id="branding">
+	    	<img id="logo" src="img/logo.jpg" alt="brand logo">
+		<img id="logo2" src="img/logo2.png" alt="business" align="right">
+		<img id="logo3" src="img/logo3.png" alt="contact" align="right">
+ 	    </div>
+            <div id="menu">
+	    	<ul>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Cooling</a></li>
+			<li><a href="#">Heating</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	    </div>
+	    <div id="content">
+	    	<h1>Call us now for an estimate at 1-800-555-5555</h1>
+		<p>We're dedicated to making sure your family or business is as comfortable as possible.</p>
+		<h3>Serving Clifton and all of Northern New Jersey</h3>
+		<center>
+			<video width="320" height="240" controls autoplay>
+				<source src="movie.mp4" type="video/mp4">
+				<source src="movie.ogg" type="video/ogg">
+				<object data="movie.mp4" width="320" height="240">
+					<embed width="320" height="240" src="movie.swf">
+				</object>
+			</video>
+			<img src="img/facebook.jpg" align="baseline" width="960px">
+		</center>
+	    </div>
+	    <div id="welcome">
+	    	<h4>Welcome to Empire Heating and Cooling</h3>
+		<p class="main">Whether you need to repair, replace, upgrade or even add a new system, our products are
+		designed to make you more comfortable. We have the knowledge and expertise to help you choose the right
+		heating and air conditionaing system to meet your needs so that you benefit from increased efficiency,
+		reliability, and control of your home or businesses' indoor environment.</p>
+	    </div>
+
+	    <div id="welcome2">
+	    	<ul>
+			<li>Full Insured/Owner Operated</li>
+			<li>Trained and experienced engineers, technicians and installers</li>
+			<li>Trouble-free installation and service calls</li>
+			<li>TQM: Total Quality Program</li>
+			<li>Exceptional customer service from start to finish</li>
+			<li>Service and preventative maintenance contracts</li>
+		</ul>
+	    </div>
+	    <div id="services">
+		<!--<aside>
+			<h3>Air Conditioning</h3>-->
+			<table>
+				<tr>
+					<th>Residential</th>
+					<th>Commericial</th>
+					<th>Industrial</th>
+				<tr>	
+				<tr>
+					<td>Central Systems</td>
+					<td>Packaged Units</td>
+					<td>Cooling Towers</td>
+				</tr>
+				<tr>
+					<td>Mini-Split Ductless</td>
+					<td>Split Systems</td>
+					<td>Chillers</td>
+				</tr>
+				<tr>
+					<td>Heat Pumps</td>
+					<td>Cooling Towers</td>
+					<td>Ventilation</td>
+				</tr>
+				<tr>
+					<td>Air Handlers</td>
+					<td>Chillers</td>
+					<td></td>
+				</tr>
+				<tr>	
+					<td>Condensers</td>
+					<td>Ventilation</td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>Ventilation</td>
+					<td></td>
+					<td></td>
+				</tr>
+		    	</table>
+		<!--</aside>-->
+		<table>
+			<tr>
+				<td>Hot Water/Steam Boilers</td>
+				<td>Hot Water/Steam Boilers</td>
+				<td>Hot Water/Steam Boilers</td>
+			</tr>
+			<tr>
+				<td>Forced Air Heating Furnaces</td>
+				<td>Forced Air Heating Furnaces</td>
+				<td>Unitary Heaters</td>
+			</tr>
+			<tr>
+				<td>Radiant Heating Systems</td>
+				<td>Unitary Heaters</td>
+				<td>Infared Radiant Systems</td>
+			</tr>
+			<tr>
+				<td></td>
+				<td>Infared Radiant Systems</td>
+				<td></td>
+			</tr>
+		</table>
+	    </div>
+	    <div id="heating">
+	    	<div id="heading1">Heating</div>
+		<p>Our goal is to keep you warm and comfortable through the winter months. We know which products and
+		systerms will work best for you.<br>
+		Our recommendations will always keep your requirements and budget in mind. We'll respond to your requests and act
+		quickly when you call.<br>
+		Nothing is more important than your peace of mind when the weather is cold.</p>
+		<center><img src="img/heating.jpg"></center>
+	    </div>
+            <div id="cooling">
+	    	<div id="heading2">Cooling</div>
+		<p>Central air conditionaing helps keep your environment cool and reduces humidity levels. As the central air
+		conditioning system draws air out of various rooms in your house or business through return air ducts, the air is
+		pulled through an air filter, which removed airbourne particles such as dust and lint. The filtered air is then
+		routed to air supply ductwork that carries it back to the rooms.</p>
+		<center><img src="img/cooling.jpg"></center>
+	    </div>
+	    <div id="about">
+	    	<div id="heading3">About Us</div>
+		<p>Our goal is to keep you warm and comfortable through the winter months. We know which products and systems will work best for you.<br>
+		Our recommendations will always keep your requirements and budget in mind. We'll respond to your requests and act quickly when you
+		call.<br>
+		Nothing is more important than your peace of mind when the weather is cold. </p>
+		<center><img src="img/about.jpg" width="960px"></center>
+	    <div id="footer"></div>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/{{JQUERY_VERSION}}/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
